# slm

./: .bumpversion.cfg  AUTO_RELEASE_GUIDE.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DOCUMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  README.md  TODO_COMPLETION.md  create-release.sh  pyproject.toml  setup.py  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: auto-release.yml  jekyll-gh-pages.yml  publish-wiki.yml  release.yml  tests.yml  version-bump.yml
docs/: ADDITIONAL_FEATURES.md  CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  FEATURES.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  QUICK_REFERENCE.md  README.md  RELEASE_GUIDE.md  SETUP_COMPLETE.md  _config.yml  index-old.md  index.md
docs/_backup/: ADDITIONAL_FEATURES.md  EXAMPLES.md
docs/examples/: README.md  api-integration.md  database-integration.md  getting-started.md
docs/guides/: README.md  quick-start.md
examples/: README.md  build_from_api.py  build_from_database.py  build_from_mongodb.py  build_qa_from_csv.py  config_lora.yml  dataset_splitting.py  model_comparison.py
examples/data/: faqs.csv
slm_builder/: __init__.py  api.py  cli.py  config.py
slm_builder/data/: __init__.py  annotator.py  api_loaders.py  database_loaders.py  loaders.py  schemas.py  splitting.py  transforms.py
slm_builder/models/: __init__.py  base.py  comparison.py  evaluation.py  export.py  gguf_wrapper.py  ollama_wrapper.py  peft_utils.py  registry.py  trainer.py
slm_builder/serve/: __init__.py  fastapi_server.py
slm_builder/utils/: __init__.py  hw.py  logging.py  serialization.py  validators.py
tests/: test_loaders.py  test_transforms.py  test_utils.py
