[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slm-builder"
version = "0.1.0"
description = "End-to-end toolkit for building Small/Specialized Language Models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "SLM Builder Team"}
]
keywords = ["nlp", "machine-learning", "language-models", "fine-tuning", "slm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "psutil>=5.9",
    "click>=8.0",
    "requests>=2.28",
    "tqdm>=4.65",
    "structlog>=23.1",
]

[project.optional-dependencies]
cpu = [
    "transformers>=4.30",
    "datasets>=2.12",
    "tokenizers>=0.13",
    "streamlit>=1.24",
    "fastapi>=0.100",
    "uvicorn>=0.22",
    "evaluate>=0.4",
    "scikit-learn>=1.3",
]

full = [
    "torch>=2.0",
    "transformers>=4.30",
    "datasets>=2.12",
    "tokenizers>=0.13",
    "accelerate>=0.20",
    "peft>=0.4",
    "bitsandbytes>=0.41",
    "onnx>=1.14",
    "onnxruntime>=1.15",
    "optimum>=1.9",
    "streamlit>=1.24",
    "fastapi>=0.100",
    "uvicorn>=0.22",
    "evaluate>=0.4",
    "scikit-learn>=1.3",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20",
]

dev = [
    "pytest>=7.3",
    "pytest-cov>=4.1",
    "black>=23.3",
    "flake8>=6.0",
    "isort>=5.12",
    "mypy>=1.3",
]

[project.scripts]
slm = "slm_builder.cli:cli"

[project.urls]
Homepage = "https://github.com/isathish/slm"
Repository = "https://github.com/isathish/slm"
Documentation = "https://github.com/isathish/slm/blob/main/README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["slm_builder*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=slm_builder --cov-report=term-missing"
